reverse url with share option using JS

--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -891,7 +891,7 @@
   </script>
   <script>
     function getpageUrl(name, slug) {
-      const redirectUrl = "";"
+      const redirectUrl = "";
       return redirectUrl;
     }
 
