--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -1,4 +1,4 @@
-{%load static%}
+{% load static %}
 {% load custom_filters %}
 
 <!DOCTYPE html>
@@ -33,9 +33,14 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="{% static 'styles78.css'%}">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="{% static 'styles745.css'%}">
   <link rel="stylesheet" href="{% static 'related22.css'%}">
-  <link rel="stylesheet" href="{% static 'postpag54.css'%}">
+  <link rel="stylesheet" href="{% static 'postpag221.css'%}">
+  <link rel="stylesheet" href="{% static 'staticlogin60.css'%}">
 
   <!-- 
     - preload images
