--- a/App/templates/postpage.html
+++ b/App/templates/postpage.html
@@ -46,6 +46,12 @@
                             </button>
                             
                         </div>
+                        <div class="post-shares-home">
+                            <span class="post-date-read"><a href="{% url 'category_detail' name=blog.category.name %}" class="hero-text2">#{{blog.category.name}}</a></span>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        
                     </div>
                 
                     <!-- Blog Content Section -->
