--- a/App/static/postpag221.css
+++ b/App/static/postpag221.css
@@ -136,9 +136,8 @@
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 .post-shares-home:hover {
-    border: 1px solid #3c95cd;
-    transition: border-color 0.3s ease;
-    border-color: #3c95cd;
+    background-color: #4da9e6;
+    color: #ffffff;
 }
 
 .post-likes, .post-bookmark, .post-share {
@@ -258,14 +257,14 @@
 .blog-register-form {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 0.5rem;
 }
 .blog-register-input {
     background-color: white;
     padding: 0.8rem;
     border: 1px solid #ddd;
     border-radius: 5px;
-    font-size: 1rem;
+    font-size: 1.1rem;
     color: black;
 }
 .blog-register-button {
@@ -277,6 +276,7 @@
     font-size: 1rem;
     cursor: pointer;
     transition: 0.3s;
+    margin-top: 5px;
 }
 .blog-register-button:hover {
     background: #0056b3;
@@ -300,6 +300,44 @@
 }
 .blog-register-text a:hover {
     color: rgb(27, 117, 200);
+}
+
+.blog-register-password {
+    text-align: center;
+    font-size: 11px;
+    color: #848484;
+    display: flex;
+    flex-direction: column;
+}
+
+.blog-register-password a {
+    margin-top: 4px;
+    color: #ffffff;
+    text-decoration: underline;
+    width: fit-content;
+    align-self: center;
+    justify-self: center;
+}
+
+.blog-register-password a:hover {
+    color: rgb(27, 117, 200);
+}
+
+.blog-register-alert {
+    font-size: 12px;
+    color: #b01a1a;
+    display: flex;
+    background-color: rgb(255, 255, 255);
+    flex-direction: column;
+    width: fit-content;
+    padding-right: 10px;
+    padding-left: 10px;
+    border-radius: 10px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.newh6{
+    font-size: 12px;
 }
 
 .logintag{
@@ -387,4 +425,58 @@
         flex-wrap: wrap; /* Allows wrapping on smaller screens */
         gap: 10px;
     }
+}
+
+/* Veify.html */
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+input[type="text"] {
+    /* padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    width: 100%; */
+}
+
+button {
+    padding: 10px;
+    /* background-color: rgb(137, 137, 104); */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    
+}
+
+.resend {
+    margin-top: 20px;
+    font-size: 14px;
+}
+
+.resend a {
+    color: #4CAF50;
+    text-decoration: none;
+}
+
+.resend a:hover {
+    text-decoration: underline;
+}
+
+.customalert {
+    display: flex;
+    align-self: flex-start;
+    font-size: 13px;
+    margin-bottom: 8px;
+    color: rgb(191, 52, 52);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-left: 7px;
 }
