--- a/App/static/postpag132.css
+++ b/App/static/postpag132.css
@@ -325,15 +325,16 @@
 
 .blog-register-alert {
     font-size: 12px;
-    color: #b01a1a;
+    color: #ed3434;
     display: flex;
-    background-color: rgb(255, 255, 255);
+    /* background-color: rgb(255, 255, 255); */
     flex-direction: column;
     width: fit-content;
     padding-right: 10px;
     padding-left: 10px;
     border-radius: 10px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    /* font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
+    transition: all 0.3s ease-in-out;
 }
 
 .newh6{
