--- a/App/static/staticlogin606.css
+++ b/App/static/staticlogin606.css
@@ -13,10 +13,12 @@
 	letter-spacing: 1px;
 	color: #fff;
 }
-.log-title{
-	margin-bottom: 15px;
 
+.log-title{
+	margin-bottom: 10px;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
 .forms {
 	display: flex;
 	align-items: flex-start;
