--- a/App/static/postpag132.css
+++ b/App/static/postpag132.css
@@ -326,6 +326,7 @@
 .blog-register-alert {
     font-size: 12px;
     color: #ed3434;
+    letter-spacing: 0.05em;
     display: flex;
     /* background-color: rgb(255, 255, 255); */
     flex-direction: column;
